--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Zoom</title>
-    <script>
-        console.log("<%= roomid %>");
-    </script>
-</head>
-<body>
-   <div id="video-grid">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-   </div>
+    <script>
+        const roomid = "<%= roomid %>";
+      console.log("<%= roomid %>");
+    </script>
+    <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Zoom</title>
+  </head>
+  <body>
+    <div id="video-grid"></div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
